# aiidalab-sssp

./: .bands-chessboard-0.ipynb  .gitignore  .pre-commit-config.yaml  .sssp-delta-factor-0.ipynb  .sssp-verification-0.ipynb  .sssp-verification-1.ipynb  .travis.yml  LICENSE  README.md  __init__.py  atompaw.ipynb  bands-chessboard.ipynb  bands-distance.ipynb  check-verification-results.ipynb  check_verification.py  delta_factor.ipynb  delta_factor.py  example.ipynb  inspect.ipynb  inspect_bak.ipynb  ld1.ipynb  metadata.json  process.py  pseudo.py  pyproject.toml  requirements.txt  setup.cfg  setup.json  setup.py  sssp-delta-factor.ipynb  sssp-docs.ipynb  sssp-verification.ipynb  sssp-workflow.ipynb  start.py  verification.ipynb  verification.py  viewers.py  widgets.py
.github/workflows/: release.yml
aiidalab_sssp/: plot.py  process.py  setup_codes.py  steps.py  version.py  widgets.py  widgets_plot.py
aiidalab_sssp/inspect/: __init__.py  band_util.py  plot_utils.py
aiidalab_sssp/inspect/subwidgets/: bands.py  convergence.py  delta.py  periodic_table.py  plot.py  select.py  summary.py  utils.py
aiidalab_sssp/parameters/: __init__.py  ssspapp.yaml
aiidalab_sssp/static/: welcome.jinja
data_mock_local/Si/: Si_nc_sg15_v1.0.json  Si_nc_sg15_v1.2.json  Si_us_psl_v1.0_high.json
data_mock_sssp/Au/: Au_sg15_v1.0.json  Au_sg15_v1.2.json  Au_us_gbrv_v1.json
data_mock_sssp/Si/: Si_nc_sg15_v1.1.json  Si_paw_psl_v1.0_high.json  Si_us_gbrv_v1.0.json
pseduos_json_demo/: Au.json
