[aiidalab]
title = SSSP verification

[metadata]
name = aiidalab-sssp
version = 22.02.0
author = J. Yu
description = AiiDAlab app to run pseudopotential verification.
url = https://github.com/aiidalab/aiidalab-sssp
project_urls =
    Logo = https://raw.githubusercontent.com/aiidalab/aiidalab-sssp/main/miscellaneous/logo-sssp.png
    Bug Tracker = https://github.com/aiidalab/aiidalab-sssp/issues
    Documentation = https://github.com/aiidalab/aiidalab-sssp#readme
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
[options]
packages = find:
install_requires =
    aiida-core~=1.6
    aiida-sssp-workflow~=0.2.0
    aiidalab-widgets-base~=1.3
    widget-periodictable~=2.1
python_requires = >=3.7
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    pre-commit==2.11.1