[metadata]
name = aiidalab_sssp
version = 22.3.2
description = AiiDAlab app to run pseudopotential verification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidalab/aiidalab-sssp
author = Jusong Yu
author_email = jusong.yu@epfl.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Logo = https://raw.githubusercontent.com/aiidalab/aiidalab-sssp/main/miscellaneous/logo-sssp.png
    Bug Tracker = https://github.com/aiidalab/aiidalab-sssp/issues
    Documentation = https://github.com/aiidalab/aiidalab-sssp#readme

[options]
packages = find:
install_requires =
    aiida-core~=1.6
    aiida-sssp-workflow~=22.3.0b2
    aiidalab-widgets-base~=1.3.0
    widget-periodictable~=2.1
python_requires = >=3.7

[options.extras_require]
dev =
    bumpver==2021.1114
    pre-commit==2.11.1

[aiidalab]
title = SSSP toolbox
description = Perform pseudopotential calculations and verification

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "v22.03.2"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiidalab_sssp/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
